iptables/rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Sat Jun 28 04:33:56 2025
*mangle
:PREROUTING ACCEPT [21694142:13033145249]
:INPUT ACCEPT [1155999:248320817]
:FORWARD ACCEPT [14061326:12125438020]
:OUTPUT ACCEPT [863954:243957907]
:POSTROUTING ACCEPT [14925235:12369393029]
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
COMMIT
# Completed on Sat Jun 28 04:33:56 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Sat Jun 28 04:33:56 2025
*filter
:INPUT ACCEPT [851545:207600247]
:FORWARD ACCEPT [531:94965]
:OUTPUT ACCEPT [0:0]
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i ens19 -j DROP
-A INPUT -d 10.0.0.1/32 -i tun0 -p icmp -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p udp -m udp --dport 67:68 -j ACCEPT
-A INPUT -d 255.255.255.255/32 -i tun0 -p udp -m udp --dport 67:68 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 4990 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 3990 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -j DROP
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun1 -p icmp -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun1 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun1 -p udp -m udp --dport 67:68 -j ACCEPT
-A INPUT -d 255.255.255.255/32 -i tun1 -p udp -m udp --dport 67:68 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun1 -p tcp -m tcp --dport 4990 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun1 -p tcp -m tcp --dport 3990 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun1 -j DROP
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i ens19 -p udp -m udp --dport 3799 -j ACCEPT
-A INPUT -i ens19 -p udp -m udp --dport 1813 -j ACCEPT
-A INPUT -i ens19 -p udp -m udp --dport 1812 -j ACCEPT
-A INPUT -i ens19 -p udp -m udp --dport 1813 -j ACCEPT
-A INPUT -i ens19 -p udp -m udp --dport 1812 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun2 -p icmp -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun2 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun2 -p udp -m udp --dport 67:68 -j ACCEPT
-A INPUT -d 255.255.255.255/32 -i tun2 -p udp -m udp --dport 67:68 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun2 -p tcp -m tcp --dport 4990 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun2 -p tcp -m tcp --dport 3990 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun2 -j DROP
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i ens19 -j DROP
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i ens19 -j DROP
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 10.0.0.1/32 -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3990 -j ACCEPT
-A FORWARD -i tun0 -o ens18 -j ACCEPT
-A FORWARD -i tun0 ! -o ens18 -j DROP
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -o tun0 -j ACCEPT
-A FORWARD -i tun0 -j ACCEPT
-A FORWARD -o ens19 -j DROP
-A FORWARD -i ens19 -j DROP
-A FORWARD -i tun1 -o ens18 -j ACCEPT
-A FORWARD -i tun1 ! -o ens18 -j DROP
-A FORWARD -o tun1 -j ACCEPT
-A FORWARD -i tun1 -j ACCEPT
-A FORWARD -i tun2 -o ens18 -j ACCEPT
-A FORWARD -i tun2 ! -o ens18 -j DROP
-A FORWARD -o tun2 -j ACCEPT
-A FORWARD -i tun2 -j ACCEPT
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -o ens19 -j DROP
-A FORWARD -i ens19 -j DROP
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -o ens19 -j DROP
-A FORWARD -i ens19 -j DROP
COMMIT
# Completed on Sat Jun 28 04:33:56 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Sat Jun 28 04:33:56 2025
*nat
:PREROUTING ACCEPT [96855:18044316]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [1818:237524]
-A PREROUTING -p udp -m udp --dport 53 -j ACCEPT
-A PREROUTING -p tcp -m tcp --dport 53 -j ACCEPT
-A PREROUTING -i tun0 -p udp -m udp --dport 53 -j DNAT --to-destination 8.8.8.8
-A POSTROUTING -o ens18 -j MASQUERADE
COMMIT
# Completed on Sat Jun 28 04:33:56 2025
